@@ -3,43 +3,29 @@ package com.example.showsyncbackend.servicios;
 import com.example.showsyncbackend.dtos.CrearSalaRequestDTO;
 import com.example.showsyncbackend.dtos.DisponibilidadSalaDTO;
 import com.example.showsyncbackend.dtos.SalaDTO;
-import com.example.showsyncbackend.modelos.DisponibilidadSalas;
-import com.example.showsyncbackend.modelos.Salas;
-import com.example.showsyncbackend.modelos.Usuario;
-import com.example.showsyncbackend.repositorios.DisponibilidadSalasRepositorio;
-import com.example.showsyncbackend.repositorios.SalasRepositorio;
-import com.example.showsyncbackend.repositorios.UsuarioRepositorio;
 import com.example.showsyncbackend.enumerados.Estado;
-import com.example.showsyncbackend.modelos.Eventos;
-import com.example.showsyncbackend.modelos.Promotores;
-import com.example.showsyncbackend.repositorios.EventosRepositorio;
-import lombok.AllArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.example.showsyncbackend.modelos.*;
+import com.example.showsyncbackend.repositorios.*;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class SalasServicio {
 
     private final UsuarioRepositorio usuarioRepositorio;
     private final DisponibilidadSalasRepositorio disponibilidadSalasRepositorio;
-    @Autowired
     private final SalasRepositorio salasRepositorio;
-
-    @Autowired
     private final PromotoresServicio promotoresServicio;
-
-    @Autowired
     private final EventosRepositorio eventosRepositorio;
 
-
-    public Salas crearSala(CrearSalaRequestDTO request) {
-        // Obtener el email del usuario autenticado
+    public SalaDTO crearSala(CrearSalaRequestDTO request) {
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
         Usuario administrador = usuarioRepositorio.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
@@ -56,38 +42,36 @@ public class SalasServicio {
                 .administrador(administrador)
                 .build();
 
-        // Guardar la sala en la base de datos
         Salas salaGuardada = salasRepositorio.save(nuevaSala);
 
-        // Registrar disponibilidad para los próximos 30 días
         LocalDate fechaInicio = LocalDate.now();
         for (int i = 0; i < 90; i++) {
-            DisponibilidadSalas disponibilidad = new DisponibilidadSalas();
-            disponibilidad.setSala(salaGuardada);
-            disponibilidad.setFecha(fechaInicio.plusDays(i));
-            disponibilidad.setDisponibilidad(true);
-            disponibilidadSalasRepositorio.save(disponibilidad);
+            disponibilidadSalasRepositorio.save(
+                    DisponibilidadSalas.builder()
+                            .sala(salaGuardada)
+                            .fecha(fechaInicio.plusDays(i))
+                            .disponibilidad(true)
+                            .build()
+            );
         }
 
-        return salaGuardada;
+        return convertirASalaDTO(salaGuardada);
     }
 
-
-    public Salas editarSala(Integer salaId, CrearSalaRequestDTO request) {
-        Salas salaExistente = salasRepositorio.findById(salaId)
+    public SalaDTO editarSala(Integer salaId, CrearSalaRequestDTO request) {
+        Salas sala = salasRepositorio.findById(salaId)
                 .orElseThrow(() -> new RuntimeException("Sala no encontrada"));
 
-        salaExistente.setNombre(request.getNombre());
-        salaExistente.setDireccion(request.getDireccion());
-        salaExistente.setCapacidad(request.getCapacidad());
-        salaExistente.setDescripcion(request.getDescripcion());
-        salaExistente.setImagen(request.getImagen());
-        salaExistente.setProvincia(request.getProvincia());
-        salaExistente.setCiudad(request.getCiudad());
-        salaExistente.setCodigoPostal(request.getCodigoPostal());
+        sala.setNombre(request.getNombre());
+        sala.setDireccion(request.getDireccion());
+        sala.setCapacidad(request.getCapacidad());
+        sala.setDescripcion(request.getDescripcion());
+        sala.setImagen(request.getImagen());
+        sala.setCiudad(request.getCiudad());
+        sala.setProvincia(request.getProvincia());
+        sala.setCodigoPostal(request.getCodigoPostal());
 
-
-        return salasRepositorio.save(salaExistente);
+        return convertirASalaDTO(salasRepositorio.save(sala));
     }
 
     public void eliminarSala(Integer salaId) {
@@ -97,113 +81,115 @@ public class SalasServicio {
         salasRepositorio.deleteById(salaId);
     }
 
-    public Salas obtenerSalaPorId(Integer id) {
-        return salasRepositorio.findById(id)
+    public SalaDTO obtenerSalaPorId(Integer id) {
+        Salas sala = salasRepositorio.findById(id)
                 .orElseThrow(() -> new RuntimeException("Sala no encontrada"));
+        return convertirASalaDTO(sala);
     }
 
-    public List<Salas> obtenerTodasLasSalas() {
-        return salasRepositorio.findAll();
+    public List<SalaDTO> obtenerTodasLasSalas() {
+        return salasRepositorio.findAll().stream()
+                .map(this::convertirASalaDTO)
+                .collect(Collectors.toList());
     }
 
-    public List<Salas> buscarSalas(String filtro) {
-        return salasRepositorio.buscarSalas(filtro);
+    public List<SalaDTO> buscarSalas(String filtro) {
+        return salasRepositorio.buscarSalas(filtro).stream()
+                .map(this::convertirASalaDTO)
+                .collect(Collectors.toList());
     }
 
-
-
-    public List<Salas> filtrarPorCapacidad(Integer min, Integer max) {
-        return salasRepositorio.filtrarPorCapacidad(min, max);
+    public List<SalaDTO> filtrarPorCapacidad(Integer min, Integer max) {
+        return salasRepositorio.filtrarPorCapacidad(min, max).stream()
+                .map(this::convertirASalaDTO)
+                .collect(Collectors.toList());
     }
-
-    private SalaDTO convertirASalaDTO(Salas sala) {
-        SalaDTO salaDTO = new SalaDTO();
-        salaDTO.setId(sala.getId());
-        salaDTO.setNombre(sala.getNombre());
-        salaDTO.setDireccion(sala.getDireccion());
-        salaDTO.setCapacidad(sala.getCapacidad());
-        salaDTO.setImagen(sala.getImagen());
-        salaDTO.setDescripcion(sala.getDescripcion());
-        return salaDTO;
-    }
-
-    private DisponibilidadSalaDTO convertirADTO(DisponibilidadSalas disponibilidad) {
-        DisponibilidadSalaDTO dto = new DisponibilidadSalaDTO();
-        dto.setId(disponibilidad.getId());
-        dto.setFecha(disponibilidad.getFecha());
-        dto.setDisponibilidad(disponibilidad.getDisponibilidad());
-        dto.setSala(convertirASalaDTO(disponibilidad.getSala())); // <-- aquí el cambio clave
-        return dto;
-    }
-
-
 
     public List<DisponibilidadSalaDTO> consultarDisponibilidad(Integer salaId, LocalDate fechaInicio, LocalDate fechaFin) {
         LocalDate hoy = LocalDate.now();
-        LocalDate maxFecha = hoy.plusDays(90);
 
-        if (fechaInicio.isBefore(hoy) || fechaFin.isAfter(maxFecha)) {
-            throw new IllegalArgumentException("La consulta solo puede realizarse entre hoy y los próximos 30 días.");
+        // Si no se proporciona fechaFin, se establece un valor predeterminado (por ejemplo, 1 año en el futuro)
+        if (fechaFin == null) {
+            fechaFin = fechaInicio.plusYears(1);
         }
 
-        List<DisponibilidadSalas> disponibilidadesEntidad =
+        if (fechaInicio.isBefore(hoy)) {
+            throw new IllegalArgumentException("La fecha de inicio no puede ser anterior a hoy.");
+        }
+
+        List<DisponibilidadSalas> disponibilidades =
                 disponibilidadSalasRepositorio.findByFechaBetweenAndSalaId(fechaInicio, fechaFin, salaId);
 
-        if (disponibilidadesEntidad.isEmpty()) {
-            List<DisponibilidadSalas> disponibilidadGenerada = new ArrayList<>();
-            LocalDate currentDate = fechaInicio;
-
+        if (disponibilidades.isEmpty()) {
+            List<DisponibilidadSalas> generadas = new ArrayList<>();
             Salas sala = salasRepositorio.findById(salaId)
                     .orElseThrow(() -> new RuntimeException("Sala no encontrada"));
-
-            while (!currentDate.isAfter(fechaFin)) {
-                DisponibilidadSalas disponibilidad = new DisponibilidadSalas();
-                disponibilidad.setSala(sala);
-                disponibilidad.setFecha(currentDate);
-                disponibilidad.setDisponibilidad(true);
-                disponibilidadGenerada.add(disponibilidad);
-                currentDate = currentDate.plusDays(1);
+            LocalDate fecha = fechaInicio;
+            while (!fecha.isAfter(fechaFin)) {
+                generadas.add(DisponibilidadSalas.builder()
+                        .sala(sala)
+                        .fecha(fecha)
+                        .disponibilidad(true)
+                        .build());
+                fecha = fecha.plusDays(1);
             }
-
-            return disponibilidadGenerada.stream()
-                    .map(this::convertirADTO)
-                    .toList();
+            return generadas.stream().map(this::convertirADTO).collect(Collectors.toList());
         }
 
-        return disponibilidadesEntidad.stream()
-                .map(this::convertirADTO)
-                .toList();
-
+        return disponibilidades.stream().map(this::convertirADTO).collect(Collectors.toList());
     }
 
-
-    //solicitar sala para un evento
     public void solicitarSala(Integer salaId, Integer promotorId, String nombreEvento, String descripcion, LocalDate fecha) {
-        // Obtener la sala por su ID
         Salas sala = salasRepositorio.findById(salaId)
                 .orElseThrow(() -> new RuntimeException("Sala no encontrada"));
-
-        // Obtener el promotor por su ID
         Promotores promotor = promotoresServicio.obtenerPromotorPorId(promotorId);
 
-        // Crear un nuevo evento en estado "en_revision"
-        Eventos nuevoEvento = Eventos.builder()
+        Eventos evento = Eventos.builder()
                 .sala_id(sala)
                 .promotor(promotor)
                 .nombre_evento(nombreEvento)
                 .descripcion(descripcion)
                 .fecha_evento(fecha)
                 .estado(Estado.en_revision)
-                .imagen_evento(null) // Puedes poner una imagen por defecto si quieres
+                .imagen_evento(null)
                 .build();
 
-        eventosRepositorio.save(nuevoEvento);
-
-        System.out.println("El promotor " + promotor.getNombrePromotor() + " ha solicitado la sala '" + sala.getNombre() + "' para el evento: " + nombreEvento);
+        eventosRepositorio.save(evento);
     }
 
+    private SalaDTO convertirASalaDTO(Salas sala) {
+        SalaDTO dto = new SalaDTO();
+        dto.setId(sala.getId());
+        dto.setNombre(sala.getNombre());
+        dto.setDireccion(sala.getDireccion());
+        dto.setCapacidad(sala.getCapacidad());
+        dto.setImagen(sala.getImagen());
+        dto.setDescripcion(sala.getDescripcion());
+        dto.setCiudad(sala.getCiudad());
+        dto.setProvincia(sala.getProvincia());
+        dto.setCodigoPostal(sala.getCodigoPostal());
+        return dto;
+    }
 
+    private DisponibilidadSalaDTO convertirADTO(DisponibilidadSalas d) {
+        DisponibilidadSalaDTO dto = new DisponibilidadSalaDTO();
+        dto.setFecha(d.getFecha());
+        dto.setDisponibilidad(d.getDisponibilidad());
+        dto.setSalaId(d.getSala().getId());
+        return dto;
+    }
 
+    //Buscar sala por ciudad
+    public List<SalaDTO> buscarSalasPorCiudad(String ciudad) {
+        return salasRepositorio.findByCiudad(ciudad).stream()
+                .map(this::convertirASalaDTO)
+                .collect(Collectors.toList());
+    }
 
-
+    //Buscar sala por provincia
+    public List<SalaDTO> buscarSalasPorProvincia(String provincia) {
+        return salasRepositorio.findByProvincia(provincia).stream()
+                .map(this::convertirASalaDTO)
+                .collect(Collectors.toList());
+    }
 }
